--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,15 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+Makefile
+Makefile.Debug
+Makefile.Release
+object_script.sources.Debug
+object_script.sources.Release
+object_script.SSWE.Release
+object_script.SSWE_d.Debug
+sources.pro
+sources.pro.user
+mingw
+msvc
+Lua
