Added Lua to the project that it doesn't need to be included manually.
Added CUIWindowAddWatersSurface class to create new water Surfaces nodes

Modified a few things in CCoreUserInterface, CRenderCallbackScripting UIMainWindow that caused some crash

Signed-off-by: Erio Maondial <linux.erio-maondial@live.fr>

--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,7 @@ sources.pro.user
 mingw
 msvc
 Lua
+SSWE/libs/lua52.dll
+SSWE/libs/lua52.lib
+Documentation/exemple cas d'ut.jpg
+sources/Device/Core/CCoreUserInterface.cpp
