Some added and fixes
- Added Windows Manager class (WIP)
- Fixed right window class
- Fixed CCoreData for Objects
- Load shader package in Edit Material Shaders
- Added IReadFile implementation in CCore class

--- a/SSWE Project/SSWE.vcxproj.filters
+++ b/SSWE Project/SSWE.vcxproj.filters
@@ -214,6 +214,9 @@
     <ClCompile Include="..\sources\UserInterfaces\MainWindow\CUIWindowAddWatersSurface.cpp">
       <Filter>UserInterfaces\MainWindow</Filter>
     </ClCompile>
+    <ClCompile Include="..\sources\UserInterfaces\CUIWindowsManager.cpp">
+      <Filter>UserInterfaces</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\sources\CharacterEdition\CAction.h">
@@ -383,6 +386,9 @@
     </ClInclude>
     <ClInclude Include="..\sources\UserInterfaces\MainWindow\CUIWindowAddWatersSurface.h">
       <Filter>UserInterfaces\MainWindow</Filter>
+    </ClInclude>
+    <ClInclude Include="..\sources\UserInterfaces\CUIWindowsManager.h">
+      <Filter>UserInterfaces</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
