--- a/SSWE Project/SSWE.vcxproj
+++ b/SSWE Project/SSWE.vcxproj
@@ -46,6 +46,7 @@
     <ClCompile Include="..\sources\UserInterfaces\CUIWindowEditNode.cpp" />
     <ClCompile Include="..\sources\UserInterfaces\CUIWindowExportScene.cpp" />
     <ClCompile Include="..\sources\UserInterfaces\CUIWindowOpenScene.cpp" />
+    <ClCompile Include="..\sources\UserInterfaces\CUIWindowsManager.cpp" />
     <ClCompile Include="..\sources\UserInterfaces\MainWindow\CUIWindowAddLight.cpp" />
     <ClCompile Include="..\sources\UserInterfaces\MainWindow\CUIWindowAddObject.cpp" />
     <ClCompile Include="..\sources\UserInterfaces\MainWindow\CUIWindowAddTerrain.cpp" />
@@ -108,6 +109,7 @@
     <ClInclude Include="..\sources\UserInterfaces\CUIWindowEditNode.h" />
     <ClInclude Include="..\sources\UserInterfaces\CUIWindowExportScene.h" />
     <ClInclude Include="..\sources\UserInterfaces\CUIWindowOpenScene.h" />
+    <ClInclude Include="..\sources\UserInterfaces\CUIWindowsManager.h" />
     <ClInclude Include="..\sources\UserInterfaces\MainWindow\CUIWindowAddLight.h" />
     <ClInclude Include="..\sources\UserInterfaces\MainWindow\CUIWindowAddObject.h" />
     <ClInclude Include="..\sources\UserInterfaces\MainWindow\CUIWindowAddTerrain.h" />
@@ -203,14 +205,14 @@
     <Link>
       <OutputFile>..\..\bin\Win32-VisualStudio\SSWE.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <AdditionalLibraryDirectories>..\..\..\\lib\Win32-visualstudio;..\..\libs\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\JulienMM\Desktop\Soganatsu Studios\Git\libs\SPARK;..\..\..\\lib\Win32-visualstudio;..\..\libs\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ProgramDatabaseFile>.\Debug/HelloWorld.pdb</ProgramDatabaseFile>
       <SubSystem>Console</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
       <DataExecutionPrevention />
       <TargetMachine>MachineX86</TargetMachine>
-      <AdditionalDependencies>lua52.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>lua52.lib;SPARK Engine CORE DLL.lib;SPARK Engine IRR DLL.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
