MOD: Fixed water surfaces addition and some bugs with the event system during the water surface creation phasis
Signed-off-by: Erio Maondial <linux.erio-maondial@live.fr>

--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,4 @@ SSWE/libs/lua52.dll
 SSWE/libs/lua52.lib
 Documentation/exemple cas d'ut.jpg
 sources/Device/Core/CCoreUserInterface.cpp
+sources/sources.pro.user.eb66fc8
