--- a/SSWE Project/SSWE.vcxproj
+++ b/SSWE Project/SSWE.vcxproj
@@ -145,6 +145,11 @@
     <ClInclude Include="..\sources\UserInterfaces\UIContextMenu.h" />
     <ClInclude Include="..\sources\UserInterfaces\UIWindowRender.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="NativeTests\NativeTests.vcxproj">
+      <Project>{70527f6c-b120-4c9f-b02a-8856467a6250}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectName>SSWE</ProjectName>
     <ProjectGuid>{5AD4C95C-BA38-4692-BA4B-8C25A86208F9}</ProjectGuid>
@@ -162,6 +167,7 @@
     <PlatformToolset>v110</PlatformToolset>
     <UseOfMfc>false</UseOfMfc>
     <CharacterSet>MultiByte</CharacterSet>
+    <CLRSupport>false</CLRSupport>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -212,6 +218,7 @@
       <CompileAs>Default</CompileAs>
       <MinimalRebuild>true</MinimalRebuild>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <EnableParallelCodeGeneration>true</EnableParallelCodeGeneration>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
