--- a/SSWE Project/SSWETests/SSWETests.vcxproj
+++ b/SSWE Project/SSWETests/SSWETests.vcxproj
@@ -57,7 +57,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>TurnOffAllWarnings</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>C:\Users\JulienMM\Desktop\Soganatsu Studios\include;$(VCInstallDir)UnitTest\include;$(SolutionDir)..\sources\Device\;$(SolutionDir)SSWECore\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\..\..\include\;$(VCInstallDir)UnitTest\include;$(SolutionDir)..\sources\Device\;$(SolutionDir)SSWECore\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <UseFullPaths>true</UseFullPaths>
     </ClCompile>
