--- a/SSWE Project/SSWETests/SSWETests.vcxproj
+++ b/SSWE Project/SSWETests/SSWETests.vcxproj
@@ -92,6 +92,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CCoreDataTests.cpp" />
     <ClCompile Include="CCoreTests.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
